--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@angular/router": "^20.3.0",
     "@angular/ssr": "^20.3.9",
     "@tailwindcss/postcss": "^4.1.17",
+    "chart.js": "^4.5.1",
     "express": "^5.1.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
